cart visibility fixed
still trying to add cart transition in and out

--- a/styles/main.css
+++ b/styles/main.css
@@ -36,12 +36,12 @@ body {
   background-color: #A0AEC0;
 } */
 
-.slide-right{
+/* .slide-right{
   -webkit-animation: slide-right 0.2s ease-in-out forwards;
   animation: slide-right 0.2s ease-in-out forwards;
-}
+} */
 
-@keyframes slide-right {
+/* @keyframes slide-right {
   0% {
     -webkit-transform: translateX(-0%);
     transform: translateX(-0%);
@@ -52,13 +52,13 @@ body {
     transform: translateX(100%);
     opacity: 0%;
   }
-}
+} */
 
 
-.slide-left {
+/* .slide-left {
   -webkit-animation: slide-left 0.2s ease-in-out forwards;
   animation: slide-left 0.2s ease-in-out forwards;
-}
+} */
 
 
 
@@ -72,7 +72,7 @@ body {
     transform: translateX(-100px);
   }
 } */
-@keyframes slide-left {
+/* @keyframes slide-left {
   0% {
     -webkit-transform: translateX(100%);
     transform: translateX(100%);
@@ -83,7 +83,7 @@ body {
     transform: translateX(-0%);
     opacity: 100%;
   }
-}
+} */
 
 #close{
   margin-top: 0.1rem;
@@ -111,4 +111,22 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
+}
+
+.step-enter {
+  opacity: 0.01;
+}
+
+.step-enter.step-enter-active {
+  opacity: 1;
+  transition: opacity 1000ms ease-in;
+}
+
+.step-leave {
+  opacity: 1;
+}
+
+.step-leave.step-leave-active {
+  opacity: 0.01;
+  transition: opacity 1200ms ease-in;
 }
